--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+.classpath
+.project
+.settings
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
